# d2c

./: .gitignore  CMakeLists.txt  README.md  cloud.txt  rgbd_align.cc  rgbd_calib.cc
src/: build.sh  calib.cc  calib.h  utility.cc  utility.h
